--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-# project1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>VI. Regulatory and ethical consideration</title>
+</head>
+<body>
+
+<h1>VI. Regulatory and ethical consideration </h1>
+<h2>HTML Feature to Explore</h2>
+<h3>Add a title of the webpage</h3>
+" The page title can 1) help you quickly identify a webpage on a browser if you open many tabs; 2) be used by search engine to determine the relevance with respect to keyword search; 3) be used as the default title when you bookmark your webpage. "
+<h3>Creating headings with multiple levels</h3>
+" Webpage headings highlight different sections on the webpage so visitors can quickly scan for information of interest. "
+<!-- Page Contents Finish -->
+</body>
+</html>
