--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
 <body>
 
 <h1>VI. Regulatory and ethical consideration </h1>
-<h2>HTML Feature to Explore</h2>
-<h3>Add a title of the webpage</h3>
-" The page title can 1) help you quickly identify a webpage on a browser if you open many tabs; 2) be used by search engine to determine the relevance with respect to keyword search; 3) be used as the default title when you bookmark your webpage. "
-<h3>Creating headings with multiple levels</h3>
-" Webpage headings highlight different sections on the webpage so visitors can quickly scan for information of interest. "
-<!-- Page Contents Finish -->
+<p>
+The HFT system has broad and sophisticated regulatory principles in different regions and countries and has had high ethical controversy since it was developed, due to its operation methodology and process. 
+</p>
+<h2> A. Current regulatory </h2>
+<p>
+The European Union applied the MiFID II document to regulate HFT operation [14]. The MiFID II requires the transparency of trading and limits the size of dark pool trading in the market and the HFT firms are required to be registered as systematic Internalisers, the MiFID II could reduce information asymmetry but somehow will also reduce the liquidity of the market [14]. 
+The US SEC (United States Securities and Exchange Commission) implements regulation NMS to regulate HFT operation [15]. This regulation adapts the order protection rule to ensure the investors gain the best offer, however, the criticizer argues the regulation will intensify the competition of HFT firms on trading speed [15]. The US also adopted a circuit breaker mechanism after the flash crash of US stock in 2010 to prevent panic selling which was exaggerated by the HFT algorithm and further led to a dramatic drop in the price of stock and raid the market [16] 
+</p>
+<h2>B. Ethical Concerns  </h2>
+<p>
+The major ethical concern of HFT is that HFT will hurt Market fairness and market environment. The first concern of the HFT system is its front-running mechanism which will make the HFT firms use information asymmetry and their high speed to gather the orders much faster than common investors making the normal investors need to spend higher prices in transactions. For example, the HFT firms could use co-location to receive the market data and information faster than common investors making them able to predict potential trade by their algorithm and place orders first causing the common investors to spend more to gain an order [8]. Another example of HFT firms using information asymmetry to gain profit from common investors is payment for order flow, retail brokers such as Robinhood would sell the customers’ who are common investors' orders to HFT firms, and the HFT firms profit from spread arbitrage, allowing the HFT firm could gain a great amount of profit from common investor by using this mechanism [17]. The HFT firms or their employees have an incentive to implement unethical operations through HFT to gain profit, for example, the HFT algorithm creates an illusion of liquidity by the large number of fake orders which creates a high amount of orders in the market and cancels them before the real implementation of order the to attract other investors to enter the transaction and then gain profit from price deviation of the true value of stock [18]. 
+</p>
+<h2>C. Ethical debate </h2>
+<p>
+Whether HFT is ethical?” is a topic discussed by many market partitioners. The advocates consider HFT has no relationship to market abuse, and it can reduce market abuse since there are studies indicating there is a negative correlation between HFT implementation and end-of-day price location and the HFT can enhance the market liquidity and reduce market inefficiency by instant trading [19]. 
+The opposer considers the HFT system would generate negative impacts on the market, by exaggerating the unstable price fluctuation causing more panic and irresponsible selling. The HFT brought new risks to the financial market due to its working mechanism and surely contributed to and was involved in several financial crises or frauds such as the Flash Crash in 2010 [19].  
+
+</p>
 </body>
 </html>
