--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <body style="background-color: lightblue;">
-<h6> CS1102 - Course Project - 2024/2025 Semester B Wu Wenluo, Wu Kong Lung,Rihad Sunbim Zahin, Cheng Si Lok </h6>
+<h6> CS1102 - Course Project - 2024/2025 Semester B - Wu Wenluo, Wu Kong Lung, Rihad Sunbim Zahin, Cheng Si Lok </h6>
 <h1>VI. Regulatory and ethical consideration </h1>
 <p>
 The HFT system has broad and sophisticated regulatory principles in different regions and countries and has had high ethical controversy since it was developed, due to its operation methodology and process. 
