--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <title>VI. Regulatory and ethical consideration</title>
 </head>
-
+<style>
+h1 {text-align: center}
+</style >
 <body>
 <body style="background-color: lightblue;">
 <h6> CS1102 - Course Project - 2024/2025 Semester B - Wu Wenluo, Wu Kong Lung, Rihad Sunbim Zahin, Cheng Si Lok </h6>
