--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2>C. Ethical debate</h2>
     <p>
-        Whether HFT is ethical?” is a topic discussed by many market partitioners. The advocates consider HFT has no relationship to market abuse, and it can reduce market abuse since there are studies indicating there is a negative correlation between HFT implementation and end-of-day price location and the HFT can enhance the market liquidity and reduce market inefficiency by instant trading [19].The opposer considers the HFT system would generate negative impacts on the market, by exaggerating the unstable price fluctuation causing more panic and irresponsible selling. The HFT brought new risks to the financial market due to its working mechanism and surely contributed to and was involved in several financial crises or frauds such as the Flash Crash in 2010 [19].
+        “Whether HFT is ethical?” is a topic discussed by many market partitioners. The advocates consider HFT has no relationship to market abuse, and it can reduce market abuse since there are studies indicating there is a negative correlation between HFT implementation and end-of-day price location and the HFT can enhance the market liquidity and reduce market inefficiency by instant trading [19].The opposer considers the HFT system would generate negative impacts on the market, by exaggerating the unstable price fluctuation causing more panic and irresponsible selling. The HFT brought new risks to the financial market due to its working mechanism and surely contributed to and was involved in several financial crises or frauds such as the Flash Crash in 2010 [19].
     </p>
 </body>
 </html>
