--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>
         The European Union applied the MiFID II document to regulate HFT operation [14]. The MiFID II requires the transparency of trading and limits the size of dark pool trading in the market and the HFT firms are required to be registered as systematic Internalisers. The MiFID II could reduce information asymmetry but somehow will also reduce the liquidity of the market [14]. The US SEC (United States Securities and Exchange Commission) implements regulation NMS to regulate HFT operation [15]. This regulation adapts the order protection rule to ensure the investors gain the best offer. However, the criticizer argues the regulation will intensify the competition of HFT firms on trading speed [15]. The US also adopted a circuit breaker mechanism after the flash crash of US stock in 2010 to prevent panic selling which was exaggerated by the HFT algorithm and further led to a dramatic drop in the price of stock and raid the market [16].
     </p>
-    <img src="image 1" alt="Description of image 1" width="400" height="400">
+    <img src="image 1.png" alt="Description of image 1" width="400" height="400">
 
     <h2>B. Ethical Concerns</h2>
     <p>
